hard-gists/1254809/run.log
=== Docker Run Log for 1254809 ===
Started at: Mi 29. Okt 12:02:18 CET 2025

[2025-10-29 12:02:19] START: Running container for 1254809
[2025-10-29 12:02:19] SUCCESS: Container 79f6fd26d23cfac6f4ec2c403af40f50b039ff83327060c6c721a1269af26b23 started for 1254809
=== Container logs for 1254809 ===
  File "/snippet.py", line 164
    print '#### No match on: %s' % thePath
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1254809 ===
[2025-10-29 12:02:21] INFO: Container 79f6fd26d23cfac6f4ec2c403af40f50b039ff83327060c6c721a1269af26b23 has stopped
